syntax = "proto2";

package dev.vhonta.content.proto;

import "zio-temporal.proto";
import "content_feed.proto";
import "content_integrations.proto";

message ContentFeedRecommendation {
  required zio.temporal.protobuf.UUID id = 1;
  required zio.temporal.protobuf.UUID owner = 2;
  required int64 integration = 3;
  required int64 forDate = 4;
}

message ContentFeedRecommendationItem {
  required zio.temporal.protobuf.UUID recommendation = 1;
  optional zio.temporal.protobuf.UUID topic = 2;
  required string title = 3;
  required string description = 4;
  required string url = 5;
  required ContentType contentType = 6;
}

message ContentFeedRecommendationView {
  required zio.temporal.protobuf.UUID id = 1;
  required dev.vhonta.content.proto.ContentFeedIntegration integration = 2;
  required int64 date = 3;
  repeated ContentFeedRecommendationItem items = 4;
}